@@ -15,6 +15,13 @@ NemakiWare is an open source Enterprise Content Management system.
 * **All-in-One package (server, full-text search engine and client)**
     * Ready to use in the real context.
     * All components are connected via CMIS interface.
+    * **Enhanced Full-Text Search**: Apache Solr with ExtractingRequestHandler (Solr Cell)
+        * PDF documents: Complete text extraction with metadata
+        * Microsoft Office: Word (.docx/.doc), Excel (.xlsx/.xls), PowerPoint (.pptx/.ppt)
+        * OpenDocument: Writer (.odt), Calc (.ods), Impress (.odp)
+        * Web formats: HTML, XML, RTF, plain text
+        * **Quick Verification**: `./quick-verify-extracting.sh`
+        * **Full Verification**: `./verify-extracting-handler.sh`
 
 
 * **NoSQL CouchDB backend**
@@ -26,6 +33,67 @@ Etymology
 ------
 "Nemaki" derives from a Japanese word "寝巻き" which means night clothes.
 You can relax and enjoy happy enterprise time as if you are lying on the couch in your room!
+
+
+## Jakarta EE 10 Development Environment
+
+NemakiWare supports modern Jakarta EE 10 development with Maven Jetty plugin for streamlined debugging and development.
+
+### Quick Start
+
+**Prerequisites:**
+- Java 17
+- Maven 3.6+
+- Docker (for CouchDB only)
+
+**Setup:**
+
+1. **Start CouchDB (Docker)**
+   ```bash
+   docker run -d --name couchdb-dev -p 5984:5984 \
+     -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=password \
+     couchdb:3
+   ```
+
+2. **Configure Java 17 Module System**
+   ```bash
+   export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+   ```
+
+3. **Start Development Server**
+   ```bash
+   cd core
+   ./start-jetty-dev.sh
+   ```
+   
+   Or manually:
+   ```bash
+   export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+   mvn jetty:run -Pjakarta -Djetty.port=8080
+   ```
+
+**Access Points:**
+- CMIS Service: `http://localhost:8080/core/atom/bedroom` (admin:admin)
+- Repository Info: `http://localhost:8080/core/atom/bedroom`
+- Folder Operations: `http://localhost:8080/core/atom/bedroom/children?id=e02f784f8360a02cc14d1314c10038ff`
+
+### Development Features
+
+- **Jakarta EE 10 Compatible**: Full support for modern Jakarta namespace
+- **Simplified Dependencies**: CouchDB-only Docker requirement
+- **Debug-Friendly**: Direct Maven execution with Jetty
+- **Fast Iteration**: Automatic code reloading
+- **Reduced Packaging Complexity**: Eliminates WAR deployment issues
+
+### Technical Details
+
+- **Runtime**: Jetty 11 with Jakarta EE 10
+- **Database**: CouchDB 3.x via Cloudant SDK
+- **Authentication**: Jakarta Servlet API compatible
+- **Search**: MockSolrUtil (disabled for development)
+- **Spring**: Version 6 with Jakarta EE support
+
+For complete setup instructions, see `JAKARTA-EE-QUICKSTART.md`.
 
 
 License
